2003-10-28  Moritz Schulte  <mo@g10code.com>

	* rsa.c: Use GCRY_AC_FLAG_DATA_NO_BLINDING instead of
	PUBKEY_FLAG_NO_BLINDING.

	* random.c: Do not include rand-internal.h.
	* rndlinux.c: Include random.h instead of rand-internal.h.

	* rand-internal.h: Move decleration of _gcry_random_progress ...
	* random.h: ... here.
	* rand-internal.h: Removed file.

2003-10-27  Moritz Schulte  <mo@g10code.com>

	* md.c (_gcry_md_info_get): New function.

	* elgamal.c (do_verify): Cleaned up a bit.

2003-10-19  Moritz Schulte  <mo@g10code.com>

	* ac.c: Document code.

2003-10-17  Moritz Schulte  <mo@g10code.com>

	* ac.c (_gcry_ac_key_get_nbits): New function, derived from
	gcry_ac_key_get_nbits ...
	(gcry_ac_key_get_nbits): Use it.
	(gcry_ac_em_dencode_t): New type.
	(em_randomize_nonzero): New function.
	(emsa_pkcs_v1_5_encode, eme_pkcs_v1_5_encode)
	(eme_pkcs_v1_5_decode): New functions.
	(dencode_action_t): New type.
	(data_dencode, gcry_ac_data_encode, gcry_ac_data_decode): New
	function.
	(_gcry_ac_mpi_to_os, _gcry_ac_mpi_to_os_alloc)
	(gcry_ac_mpi_to_os_alloc, _gcry_ac_os_to_mpi, gcry_ac_os_to_mpi):
	New functions.
	(gcry_ac_dencode_prepare_t, gcry_ac_dencode_to_os_t): New types.
	(ac_es_dencode_prepare_pkcs_v1_5, ac_es_dencode_to_os_pkcs_v1_5)
	(ac_ssa_dencode_prepare_pkcs_v1_5): New functions.
	(ac_scheme_t): New type.
	(ac_schemes): New variable.
	(ac_scheme_get): New function.
	(ac_dencode_prepare, ac_es_dencode_to_os): New functions.
	(ac_scheme_data_type_t): New type.
	(ac_data_set_to_mpi, ac_mpi_to_data_set)
	(gcry_ac_data_encrypt_scheme, gcry_ac_data_decrypt_scheme): New
	functions.
	(gcry_ac_data_sign_scheme, gcry_ac_data_verify_scheme): New functions.

2003-10-12  Moritz Schulte  <mo@g10code.com>

	* elgamal.c (do_verify): Fix error condition.

	* ac.c (_gcry_ac_data_set): New function, derived from
	gcry_ac_data_set ...
	(gcry_ac_data_set): ... use it.
	(_gcry_ac_data_destroy): New function, derived from
	gcry_ac_data_destroy ...